2000-11-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	Thanks to Julian Satchell for the bug report:

	* coop-threads.c (scm_join_thread):  Check whether a thread is
	finished before trying to join it.

	* coop.c (coop_aborthelp, coop_join):  When a thread finishes, its
	stack base is not set to NULL any more.

2000-11-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* strop.c (scm_i_index):  Removed outdated comment.

2000-11-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* struct.c (scm_struct_ref, scm_struct_set_x), symbols.c
	(scm_intern_obarray_soft), symbols.h (SCM_ROUCHARS):  Eliminate
	use of SCM_SYMBOL_UCHARS by using chars instead of unsigned
	chars.

	(SCM_SYMBOL_UCHARS):  Removed.

2000-11-26  Gary Houston  <ghouston@arglist.com>

	* reimplementation of values, call-with-values as primitives:
	
	* values.c, values.h: new files.  use a struct to contain multiple
	values, similar to the previous Scheme-level implementation.
	* Makefile.am: add values.c, values.h, values.x.
	* continuations.c (continuation_apply): support R5RS multiple value
	continuations.
	* init.c: call scm_init_values.
	* struct.h: define SCM_SET_STRUCT_PRINTER.

2000-11-25  Gary Houston  <ghouston@arglist.com>

	* use an applicable SMOB to represent continuations, instead of a
	custom tc7 type.  This will make it easier to support R5RS
	multiple value continuations, without the use of a Scheme-level
	wrapper.

	* continuations.c (scm_tc16_continuation, continuation_mark,
	continuation_free, continuation_print, continuation_apply):
	new SMOB support.
	(scm_make_continuation): new procedure, replaces scm_make_cont
	with a different interface.
	(copy_stack_and_call, scm_dynthrow, scm_init_continuations): rewritten.
	(CHEAP_CONTINUATIONS): removed non-working code completely.
	(scm_call_continuation): removed.
	* continuations.h (struct scm_contregs): add num_stack_items and
	stack fields.  previously stack was stored following this struct:
	use a tail array instead.
	(SCM_CONTINUATIONP): new macro.